--- a/src/main/webapp/content/scss/themes/theme-dark.scss
+++ b/src/main/webapp/content/scss/themes/theme-dark.scss
@@ -306,4 +306,6 @@ input:-webkit-autofill:active {
     --feature-card-inactive-bg: #3a3a3a;
     --feature-card-heading-color: #fff;
     --onboarding-content-bg: #3a3a3a;
+    --overview-card-bg: #3a3a3a;
+    --overview-card-nested-bg: #2d2d2d;
 }
